# rust

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.sh
.github/workflows/: package.yml  test.yml
benches/: bench.rs
src/: gl_bindings.rs  interleaved.rs  js_types.rs  ktx.rs  lib.rs  outlines.rs  parser.rs  parser_2_0.rs  parser_2_1.rs  parser_reader.rs  range.rs  reader_2_0.rs  reader_2_1.rs  thin_slice.rs  types.rs  types_2_0.rs  types_2_1.rs  utils.rs  utils_2_0.rs  utils_2_1.rs
tests/: test.rs
wasm-bindgen-benchmarks/: index.html  index.js  package-lock.json  package.json
wasm-parser-derive/: Cargo.toml
wasm-parser-derive/src/: lib.rs
