[package]
name = "wasm-parser"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "wasm-parser-derive",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
paste = "1.0.14"
wasm-parser-derive = { path = "wasm-parser-derive" }
# densevec = { version = "0.5.1", features = [], optional = true }
# once_cell = { version = "1.18.0", features = [] }
# bumpalo = { version = "3.14.0", optional = true }
# gl = "0.14.0"
bitflags = { version = "2.4.0", features = ["serde", "bytemuck"] }
half = { version = "2.3.1", features = ["bytemuck", "serde"] }
bytemuck = { version = "1.14.0", features = [ "derive" ] }
# bincode = "1"
# serde = { version = "1", default-features = false, features = ["derive", "serde_derive"] }
wasm-bindgen = { version = "0.2.87", features = [] }
web-sys = { version = "0.3.64", features = ["console"], optional = true }
js-sys = "0.3.64"
# serde-wasm-bindgen = "0.6.0"
# serde_tuple = "0.5.0"
hashbrown = "0.14.1"
gl = "0.14.0"

[target.'cfg(not(target_family="wasm"))'.dependencies]
log = "0.4.20"

[target.'cfg(target_family="wasm")'.dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'Performance',
] }
reqwest = { version = "0.11", features = ["blocking"] }
anyhow = "1.0.75"

[profile.release]
lto =  true

[features]
console = ["web-sys", "console_error_panic_hook"]
checked_types = []
unstable = []
# default = ["console", "checked_types"]
