[package]
name = "wasm-parser"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "wasm-parser-derive",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
paste = "1.0.14"
wasm-parser-derive = { path = "wasm-parser-derive" }
bitflags = { version = "2.4.0", features = ["serde", "bytemuck"] }
half = { version = "2.3.1", features = ["bytemuck", "serde"] }
bytemuck = { version = "1.14.0", features = [ "derive" ] }
wasm-bindgen = { version = "0.2.87", features = [] }
web-sys = { version = "0.3.64", features = ["console"], optional = true }
js-sys = "0.3.64"
hashbrown = "0.14.1"
endianness = "0.2.0"
anyhow = "1.0.75"
cap = { version = "0.1.2", features = ["stats"], optional = true }
bumpalo = { version = "3.14.0", features = ["allocator-api2"] }
allocator-api2 = "0.2.16"
glam = "0.24.2"
densevec = "0.5.1"

[target.'cfg(not(target_family="wasm"))'.dependencies]
log = "0.4.20"

[target.'cfg(target_family="wasm")'.dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'Performance',
] }
reqwest = { version = "0.11", features = ["blocking"] }
anyhow = "1.0.75"

[profile.release]
lto =  true

[profile.debug-optimized]
inherits = "dev"
opt-level = 1


[features]
console = ["web-sys", "console_error_panic_hook"]
checked_types = []
memory-monitor = ["cap"]
unstable = []
# default = ["console", "checked_types"]
